# WebLogHunter

./: .gitignore  README  README.md  config.yaml  pyproject.toml  requirements.txt  rules.yaml  shells.txt  triage.py
WebLogTriage/: __init__.py  config.py  dataframe.py  parser.py  risk.py
utils/: email.py
